overflow fix

--- a/myassets/css/alum.css
+++ b/myassets/css/alum.css
@@ -13,6 +13,7 @@ html, body{
   height: 100%;
   min-width: 100%;
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
 
 #homepage{
@@ -44,7 +45,7 @@ html, body{
   background-repeat: no-repeat;
   background-color: #3C7A89;
   color: #FFF;
-  overflow: hidden;
+  
 }
 
 #topsec::after{
@@ -56,7 +57,7 @@ html, body{
   height: 80%;
   background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.4) 80%,rgba(0,0,0,.4) 100%);
   background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.4) 80%,rgba(0,0,0,.4) 100%);
-  overflow: hidden;
+  
 }
 
 #topsec a span{
